# blockforge

./: .appveyor.yml  .gitignore  .gitlab-ci.centos.yml  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Gopkg.toml  LICENSE  Makefile  README.md  appveyor.yml  autominer.go  config.hcl  main.go  miner.hcl
algo/: algo.go
cgo/: package.go  xmrstak.swigcxx
cmd/: cmd.go  gui.go  gui_other.go  gui_windows.go  hardware.go  miner.go
coin/: coin.go  lookup.go  miner.go
command/: command.go  gui.go  hardware.go  miner.go  stratum.go
crypto/: Cargo.toml
currency/: currency.go  etherum.go  ethminer.go  monero.go
gui/: app.css  app.tag  box.go  coin-edit.html  coin-edit.tag  coin-list.html  coin-list.tag  cpu.tag  gui-main.html  gui-main.tag  gui.go  hardware-list.html  hardware-list.tag  index.html  index.js  polyfill.js
hardware/: hardware.go
hash/: CMakeLists.txt  cryptonight.go  cryptonight_test.go  ethash.go  ethash_test.go  hash.c  hash.go  hash.h  hash_test.go
hash/cryptonight/: CMakeLists.txt  chacha.c  crypto-ops.c  hash-ops.h  int-util.h  skein_port.h  slow-hash-lite.c  tree-hash.c
hash/ethash/: CMakeLists.txt  internal.h  util.h
hash/opencl/: cryptonight.cl  cryptonight.go  groestl256.cl  jh.cl  opencl.go  wolf-skein.cl
log/: log.go
miner/: config.go  miner.go  miner_test.go
opencl/: amd.cl  box.go  cryptonight.cl  ethash.cl  wolf-aes.cl  wolf-skein.cl
snap/: snapcraft.yaml
stratum/: client.go  client_jsonrpc.go  client_nicehash.go  cryptonight.go  ethash.go  stratum.go
website/: config.toml
worker/: cryptonight.go  cryptonight_cl.go  pool.go  (+6 more)
(+40 files in other folders)
